# python-project-52

./: .gitignore  Makefile  Procfile  README.md  coverage.xml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: mycheck.yml
task_manager/: forms.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0003_alter_status_name.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_description_alter_task_executor.py  0003_remove_task_labels_tasksandlabels_task_labels.py  0004_alter_task_executor.py  0005_alter_task_executor.py  0006_alter_task_creator_alter_task_description_and_more.py
task_manager/templates/: base.html  delete.html  index.html  login.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/task_manager/: base.html  index.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  index.html  update.html
task_manager/templates/users/: chern.html  create.html  delete.html  index.html  update.html
task_manager/tests/: conftest.py  test_labels.py  test_statuses.py  test_tasks.py  test_users.py
task_manager/users/: admin.py  forms.py  forms.pyy  models.py  tests.py  tests.py.save  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  (+9 more)
tests/: test_tasks.py  test_users.py  test_views.py
(+2 files in other folders)
