[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["svetlana_akaemova <akaemova.sv@mail.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.7"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
