[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager app"
authors = ["svetlana_akaemova <akaemova.sv@mail.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
django = "^4.0.0"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
django-bootstrap4 = "^22.3"
whitenoise = "^6.4.0"
django-crispy-forms = "^2.0"
crispy-bootstrap4 = "^2022.1"
pytest-cov = "^4.0.0"
django-filter = "^23.2"
rollbar = "^0.16.3"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
